--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nekko's Webpage</title>
-    <link rel="stylesheet" href="/First-Site/CSS/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="/CSS/style.css" type="text/css" media="all" />
 </head>
 
 <body>
