--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,7 @@
     <title>Hobbies</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/First-Site/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
