--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact Me</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/First-Site/CSS/grey2.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="CSS/grey2.css" type="text/css" media="all" />
 </head>
 
 <body>
