--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </td>
             <td>
                 <h1>Nekko Street</h1>
-                <p>Junior <a href="https://en.wikipedia.org/wiki/Web_developer">Web Deveolper</a></p>
+                <p>Junior <a href="https://en.wikipedia.org/wiki/Web_developer">Web Developer</a></p>
                 <p>I began my journey of web developement in 2016.</p>
             </td>
         </tr>
