--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table>
         <tr>
             <td>
-                <img class="round-img" src=Pics/nekko.png height='200px' width='200px'>
+                <img class="round-img" src=Pics/nekko.jpg height='200px' width='200px'>
             </td>
             <td>
                 <h1>Nekko Street</h1>
@@ -71,11 +71,11 @@
                         </tr>
                         <tr>
                             <td>JavaScript</td>
-                            <td>⭐⭐⭐</td>
+                            <td>⭐⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>BootStrap FrameWork</td>
-                            <td>⭐⭐⭐⭐</td>
+                            <td>⭐⭐⭐⭐<⭐/td>
                         </tr>
                     </tbody>
                 </table>
@@ -86,7 +86,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>HTML</td>
+                            <td>NodeJS</td>
                             <td>⭐⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
@@ -98,7 +98,7 @@
                             <td>⭐⭐⭐</td>
                         </tr>
                         <tr>
-                            <td>SQL</td>
+                            <td>MongoDB</td>
                             <td>⭐⭐</td>
                         </tr>
                     </tbody>
