--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nekko's Webpage</title>
     <link rel="stylesheet" href="CSS/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="CSS/grey.css">
 </head>
 
 <body>
